--- a/play.ipynb
+++ b/play.ipynb
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "M2",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
