generating text using the weights of GPT2 from huggingface and initialize our GPT with it

--- a/play.ipynb
+++ b/play.ipynb
@@ -356,13 +356,82 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, I'm a language model. I'm talking about the abstractions of languages. Those things are easy to understand: you can program them yourself\n",
+      "Hello, I'm a language model. So you are supposed to understand that you do not talk about a single language with it. People understand languages too\n",
+      "Hello, I'm a language model. What's this? A model for the world of \"completing\" a task? And in an even more\n",
+      "Hello, I'm a language model. I wrote this post as a way to learn this stuff and show others how to use the Language Model.\n",
+      "\n",
+      "Hello, I'm a language model. A language model is an abstraction of what we're talking about, and it's about getting real. It's\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the results we get from generation of our version of GPT is not comparable to the huggingface generation pipeline:\n",
+    "# These are the generated text by out implementation of GPT\n",
+    "\n",
+    "# > Hello, I'm a language model. I'm talking about the abstractions of languages. Those things are easy to understand: you can program them yourself\n",
+    "# > Hello, I'm a language model. So you are supposed to understand that you do not talk about a single language with it. People understand languages too\n",
+    "# > Hello, I'm a language model. What's this? A model for the world of \"completing\" a task? And in an even more\n",
+    "# > Hello, I'm a language model. I wrote this post as a way to learn this stuff and show others how to use the Language Model.\n",
+    "# > Hello, I'm a language model. A language model is an abstraction of what we're talking about, and it's about getting real. It's\n",
+    "\n",
+    "# So, we are gonna sample manually from the huggingface GPT\n",
+    "import torch \n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "from transformers import GPT2LMHeadModel\n",
+    "\n",
+    "max_length = 30\n",
+    "num_return_sequences = 5\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)\n",
+    "\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"gpt2\")\n",
+    "model.eval()\n",
+    "# model.to(\"cuda\") # I don't have GPU for now!\n",
+    "\n",
+    "\n",
+    "import tiktoken\n",
+    "enc = tiktoken.get_encoding(\"gpt2\")\n",
+    "tokens = enc.encode(\"Hello, I'm a language model.\")\n",
+    "tokens = torch.tensor(tokens, dtype=torch.long)\n",
+    "tokens = tokens.unsqueeze(0).repeat(num_return_sequences, 1)\n",
+    "x = tokens\n",
+    "\n",
+    "while x.size(1) <= max_length:\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(x)[0]\n",
+    "        # we are interested in the logits in the last position\n",
+    "        logits = logits[:, -1, :]\n",
+    "        probs = F.softmax(logits, dim=-1)\n",
+    "        topk_probs, topk_indices = torch.topk(probs, 50, dim=-1)\n",
+    "        ix = torch.multinomial(topk_probs, 1)\n",
+    "        xcol = torch.gather(topk_indices, -1, ix)\n",
+    "        x = torch.cat((x, xcol), dim=1)\n",
+    "\n",
+    "# genrate text\n",
+    "for i in range(num_return_sequences):\n",
+    "    decoded = enc.decode(x[i, :max_length].tolist())\n",
+    "    print(decoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "M2",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
