wte and lm_head weights must be similar

--- a/play.ipynb
+++ b/play.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56b3fcdfdb1a4c6cbcbab1c5594d0181",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/665 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d38bc9a66ae45d6ad0b2ee2d58e2a6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/548M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b10c58bbe2c6443687adaa1de736216d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "generation_config.json:   0%|          | 0.00/124 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -419,6 +461,36 @@
     "for i in range(num_return_sequences):\n",
     "    decoded = enc.decode(x[i, :max_length].tolist())\n",
     "    print(decoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([50257, 768])\n",
+      "torch.Size([50257, 768])\n",
+      "13302284288\n",
+      "13302284288\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sd_hf[\"lm_head.weight\"].shape)  # This one is in the bottom of the LLM architecture\n",
+    "print(sd_hf[\"transformer.wte.weight\"].shape)  # This one is on the top\n",
+    "\n",
+    "(sd_hf['transformer.wte.weight'] == sd_hf['lm_head.weight']).all()\n",
+    "\n",
+    "# this is the way to get the data pointers in Pytorch\n",
+    "print(sd_hf['transformer.wte.weight'].data_ptr())\n",
+    "print(sd_hf['lm_head.weight'].data_ptr())\n",
+    "\n",
+    "# They're identical tensors and they point to the same location in memory. We want these two metrices to behave similar.\n",
+    "# Similarily, when two tokens are similar semantically, we expect to get the near exact value for their probabilities."
    ]
   },
   {
