using automaic mixed precision to increase speed and reduce memory usage

--- a/play.ipynb
+++ b/play.ipynb
@@ -497,6 +497,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(9.9479)\n",
+      "tensor(0.9664)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# standard deviation grows inside the residual streams\n",
+    "x = torch.zeros(768)\n",
+    "n = 100  # e.g. 100 layers\n",
+    "for i in range(n):\n",
+    "    x += torch.randn(768)\n",
+    "\n",
+    "print(x.std())\n",
+    "\n",
+    "# it is mentioned in the GPT2 paper that they scaled it by 1/sqrt(depth of the residual path)\n",
+    "# so for the above example, we scale it by 1/sqrt(100)\n",
+    "\n",
+    "x = torch.zeros(768)\n",
+    "for i in range(n):\n",
+    "    x += torch.randn(768) * n ** -0.5\n",
+    "\n",
+    "print(x.std())\n",
+    "\n",
+    "# This is a way to control the growth of activation inside the residual streams\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
